# marketing-intelligence-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  SPEC.md  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
data/: demo_campaigns.csv  eval_questions.json  generate_demo.py  generate_rsya.py  rsya_campaigns.csv
design-system/marketing-intelligence-agent/: MASTER.md
design-system/marketing-intelligence-agent/pages/: dashboard.md
src/: graph.py  mcp_server.py  state.py
src/agents/: analytics.py  rag.py  report.py  research.py  strategy.py  supervisor.py
src/api/: main.py  schemas.py
src/evaluation/: evaluator.py
src/tools/: charts.py  data_loader.py  doc_loader.py  firecrawl_scraper.py  interpreter.py  rss.py  scraper.py  search.py  segmentation.py  sentiment.py  sql_loader.py  vector_store.py
src/ui/: app.py
tests/: test_analytics.py  test_analytics_enhanced.py  test_api.py  test_evaluation.py  test_graph.py  test_intelligent_report.py  test_mcp.py  test_production_features.py  test_rag.py  test_react_integration.py  test_research.py  test_research_enhanced.py  test_rsya.py  test_strategy.py  test_ui.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChatInput.tsx  ChatMessage.tsx  HITLApproval.tsx  Sidebar.tsx  StreamingStatus.tsx  WelcomeState.tsx
ui/src/components/__tests__/: ChatMessage.test.tsx  HITLApproval.test.tsx  Sidebar.test.tsx  WelcomeState.test.tsx  api.test.ts
ui/src/lib/: api.ts  types.ts
