[project]
name = "marketing-intelligence-agent"
version = "0.1.0"
description = "Multi-agent marketing analytics system powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.18",
    "mcp[cli]>=1.0.0",
    "chromadb>=0.5.0",
    "ragas>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
